infrastructure/kubernetes/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: maratea
  labels:
    app: app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: app
